--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "allowJs": true,
     "noEmit": true,
     "outDir": "dist",
-    "resolveJsonModule": true
-  }
+    "resolveJsonModule": true,
+  },
 }
